# Dying-Light-1-DUALSENSE-MOD

./: CMakeLists.txt  DL1-Dualsense.sln  DLGameDualsenseExtension.sln  README.md
DL-HOOK/: DLML.sln  DLML.vcxproj  DLML.vcxproj.filters  Hooks.cpp  Hooks.h  dllmain.cpp  dsound.def
DL-HOOK/MinHook/: trampoline.c
DL1-Dualsense/: DL1-Dualsense.csproj  DSX.cs  DualsenseControllerAPI.cs  Game.cs  HapticFeedback.cs  Program.cs
DLGameDualsenseExtension/: DLGameDualsenseExtension.vcxproj  DLGameDualsenseExtension.vcxproj.filters  DualSenseAPI.h  Vigem.h  dllmain.cpp  framework.h  pch.cpp  pch.h
DLGameDualsenseExtension/ViGEm/: Client.h
DLGameDualsenseExtension/include/: ViGEmClient.lib  WujLibPad.lib
include/: functions.hpp  game.hpp  settings.hpp
source/: main.cpp
